--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>Gradient Circle Frame</title>
     <meta property="fc:frame" content="vNext" />
-    <meta id="fc-frame-image" property="fc:frame:image" content="https://gen-frame.vercel.app/default.png" />
-    <meta id="og-image" property="og:image" content="https://gen-frame.vercel.app/default.png" />
+    <meta id="fc-frame-image" property="fc:frame:image" content="https://github.com/0xDCy/gen-frame/assets/130424903/00e10534-82a7-4d38-af5e-3995f7599fbf" />
+    <meta id="og-image" property="og:image" content="https://github.com/0xDCy/gen-frame/assets/130424903/00e10534-82a7-4d38-af5e-3995f7599fbf" />
     <meta property="fc:frame:button:1" content="Generate New Artwork" />
     <meta property="fc:frame:button:1:action" content="post" />
     <meta property="fc:frame:post_url" content="/api/generateArt" />
