--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta id="og-image" property="og:image" content="https://github.com/0xDCy/gen-frame/assets/130424903/00e10534-82a7-4d38-af5e-3995f7599fbf" />
     <meta property="fc:frame:button:1" content="Generate New Artwork" />
     <meta property="fc:frame:button:1:action" content="post" />
-    <meta property="fc:frame:post_url" content="/api/generateArt" />
+    <meta property="fc:frame:post_url" content="/api/generateColor" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
